--- a/package.json
+++ b/package.json
@@ -14,5 +14,16 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "cors": "^2.8.5",
+    "debug": "^4.3.3",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.4.0",
+    "morgan": "^1.10.0",
+    "supertest": "^6.2.2"
   }
 }
